usertraits in own collection
